[gd_scene load_steps=87 format=2]

[ext_resource path="res://assets/sprites/Enemy_Sprite_Sheets/Vine_Man/Vine_Man-Grow.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Enemy_Sprite_Sheets/Vine_Man/Vine_Man-Claw.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Enemy_Sprite_Sheets/Vine_Man/Vine_Man-Die.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Enemy_Sprite_Sheets/Vine_Man/Vine_Man-Shrink.png" type="Texture" id=4]
[ext_resource path="res://code/enemy_health_script.gd" type="Script" id=5]
[ext_resource path="res://code/enemy_vine_man.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 1248, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 1344, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 672, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 864, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1056, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1152, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1248, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1344, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1440, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1344, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 864, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 1056, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 1248, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 96, 48 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 96, 48 )

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "grow",
"speed": 12.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "shrink",
"speed": 12.0
}, {
"frames": [ SubResource( 72 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 0.6
loop = true
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=63]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite/AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("../..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "grow" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20.75, -3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 18.6515, 5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.616, 1 ) ]
}

[sub_resource type="Animation" id=79]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_death"
} ]
}

[sub_resource type="Animation" id=64]
resource_name = "grow"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite/AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ NodePath("../..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "grow" ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_grow"
} ]
}

[sub_resource type="Animation" id=73]
resource_name = "off"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "off" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=78]
resource_name = "shrink"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shrink" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=66]
resource_name = "vine_attack"
length = 1.2
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7, 0.77, 0.84, 0.91, 0.98, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack", "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.14, 0.98 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.14, 0.21, 0.28, 0.7, 0.91 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3.94947, 5 ), Vector2( 4.787, 5 ), Vector2( 6.823, 5 ), Vector2( 6.823, 5 ), Vector2( 1.923, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite/Area2D2/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.14, 0.21, 0.28, 0.7, 0.91 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10.7187, -3 ), Vector2( -22.152, -3 ), Vector2( -22.152, -3 ), Vector2( -22.152, -3 ), Vector2( -18.254, -3 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.14 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_attack"
} ]
}

[sub_resource type="RectangleShape2D" id=77]
extents = Vector2( 18.6515, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 20.75 )

[sub_resource type="RectangleShape2D" id=65]
extents = Vector2( 10, 21.5 )

[sub_resource type="AnimationNodeAnimation" id=80]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "grow"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "off"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "vine_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=69]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachine" id=70]
states/die/node = SubResource( 80 )
states/die/position = Vector2( 783.707, 72 )
states/grow/node = SubResource( 67 )
states/grow/position = Vector2( 366, 118 )
states/off/node = SubResource( 74 )
states/off/position = Vector2( 501.707, 224 )
states/vine_attack/node = SubResource( 68 )
states/vine_attack/position = Vector2( 584, 106 )
transitions = [ "grow", "vine_attack", SubResource( 69 ), "vine_attack", "off", SubResource( 75 ), "off", "grow", SubResource( 76 ), "vine_attack", "die", SubResource( 81 ) ]
graph_offset = Vector2( 20.7067, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=71]

[node name="VineMan" type="KinematicBody2D"]
position = Vector2( 518, 61 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, 0 )
frames = SubResource( 2 )
animation = "grow"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
root_node = NodePath("../..")
autoplay = "off"
"anims/New Anim" = SubResource( 4 )
anims/RESET = SubResource( 63 )
anims/die = SubResource( 79 )
anims/grow = SubResource( 64 )
anims/off = SubResource( 73 )
anims/shrink = SubResource( 78 )
anims/vine_attack = SubResource( 66 )

[node name="Area2D2" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 3, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D2"]
position = Vector2( -20.75, -3 )
scale = Vector2( 3.616, 1 )
shape = SubResource( 77 )
disabled = true

[node name="World" type="Node" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -3.31251, 2.49443 )
scale = Vector2( 0.368751, 0.265198 )
process_parent = true
physics_process_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 2.75 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["enemies"]]
position = Vector2( -4, 3 )
shape = SubResource( 65 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 70 )
anim_player = NodePath("../AnimatedSprite/AnimationPlayer")
active = true
parameters/playback = SubResource( 71 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1, 3 )
scale = Vector2( 0.15, 0.2 )

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]
volume_db = -9.614

[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="Area2D" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AnimatedSprite/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
